[gd_scene load_steps=22 format=2]

[ext_resource path="res://Enemies/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/PlayerDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/ItemDropper.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/Sound Objects/SoundQueue.tscn" type="PackedScene" id=9]
[ext_resource path="res://Audio/Files/EnemyHurt.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Files/EnemyWalk.wav" type="AudioStream" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 18, 18 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 5 )

[sub_resource type="CircleShape2D" id=7]
radius = 50.04

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 9 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 8, 9 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 64
script = ExtResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 7 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="PlayerDetector" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="PlayerDetector" index="0"]
modulate = Color( 1, 1, 1, 0.329412 )
shape = SubResource( 7 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 10 )

[node name="ItemDropper" parent="." instance=ExtResource( 8 )]
enemy_type = "Enemy1"

[node name="HurtSoundQueue" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="HurtSoundQueue"]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="WalkSoundQueue" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WalkSoundQueue"]
stream = ExtResource( 13 )
volume_db = -10.0
pitch_scale = 0.5
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetector"]

[editable path="SoftCollision"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
